<resources>
    <string name="app_name">AfishaMovies</string>
    <string name="afisha_movies">Afisha Movies</string>
    <string name="skip">Пропустить</string>
    <string name="welcome_image">welcome image</string>
    <string name="all">Все</string>
    <string name="poster">poster</string>
    <string name="popular">Популярное</string>
    <string name="action_usa">Боевики США</string>
    <string name="top250">Топ 250</string>
    <string name="drama_france">Драмы Франции</string>
    <string name="series">Сериалы</string>
    <string name="russian_comedy">Русские комедии</string>
    <string name="retry">Повторить</string>
    <string name="show_all">Показать все</string>
    <string name="person_in_film">В фильме снимались</string>
    <string name="worker_in_film">Над фильмом работали</string>
    <string name="gallery">Галерея</string>
    <string name="similar_movie">Похожие фильмы</string>
    <string name="frames">Кадры</string>
    <string name="backstage">Бэкстейдж</string>
    <string name="posters">Постеры</string>
    <string name="empty_images_by_type">Изображения \nпо данной категории отсутствуют</string>
    <string name="error_load_data">Произошла ошибка\n при загрузке данных</string>
    <string name="deeplink_film">Смотри! %1$s\nhttps://afisha.app/film?movieId=%2$d\n</string>
    <string name="share_via">Поделиться через</string>
    <string name="sb_main_hint">Название фильма или сериала</string>
    <string name="films">Фильмы</string>
    <string name="search_settings">Настройки поиска</string>
    <string name="show">Показывать</string>
    <string name="country">Страна</string>
    <string name="genre">Жанр</string>
    <string name="any">Любой</string>
    <string name="ten">10</string>
    <string name="one">1</string>
    <string name="rating">Рейтинг</string>
    <string name="date">Дата</string>
    <string name="popular_sort_type">Популярность</string>
    <string name="dont_watched">Не просмотрен</string>
    <string name="sort">Сортировать</string>
    <string name="any_v2">Любая</string>
    <string name="reset_filter">Сбросить фильтр</string>
    <string name="input_country">Введите страну</string>
    <string name="input_genre">Введите жанр</string>
    <string name="year">Год</string>
    <string name="period">Период</string>
    <string name="find_period_from">Искать в период с</string>
    <string name="find_period_to">Искать в период до</string>
    <string name="pick">Выбрать</string>
    <string name="submit">Применить</string>
    <string name="empty">К сожалению, по вашему запросу ничего не найдено</string>
    <string name="russia">Россия</string>
    <string name="great_britain">Великобритания</string>
    <string name="germany">Германия</string>
    <string name="usa">США</string>
    <string name="france">Франция</string>
    <string name="comedy">Комедия</string>
    <string name="melodrama">Мелодрама</string>
    <string name="action">Боевик</string>
    <string name="western">Вестерн</string>
    <string name="drama">Драма</string>
    <string name="watched">Просмотрено</string>
    <string name="collections">Коллекции</string>
    <string name="add_your_collection">Создать свою коллекцию</string>
    <string name="you_have_interested">Вам было интересно</string>
    <string name="liked">Любимые</string>
    <string name="want_to_watch">Хочу посмотреть</string>
    <string name="clear_history">Очистить историю</string>
    <string name="empty_collection">Здесь пока ничего нет,\n как только пополните коллекцию\nтут что-то появится</string>
    <string name="empty_interested_collection">Здесь пока ничего нет,\n как только начнете интересоваться фильмами\nтут что-то появится</string>
    <string name="ready">Готово</string>
    <string name="create_collection_hint">Придумайте название для вашей новой коллекции</string>
    <string name="empty_collection_name_error">Имя коллекции не должно быть пустым</string>
    <string name="add_to_collection">Добавить в коллекцию</string>
</resources>