<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.ui.searchpage.searchsettingsfragment.searchchoosefragment.SearchChooseFragment">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height_56dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/country"
            android:textSize="@dimen/text_size_18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="@dimen/width_46dp"
            android:layout_height="@dimen/height_46dp"
            android:background="@drawable/bg_ripple_rectangle"
            android:clickable="true"
            android:contentDescription="@null"
            android:focusable="true"
            android:src="@drawable/arrow_back" />
    </Toolbar>

    <ImageView
        android:layout_width="@dimen/zero_dp"
        android:layout_height="@dimen/height_36dp"
        android:contentDescription="@null"
        android:paddingStart="@dimen/padding_start_16dp"
        android:paddingEnd="@dimen/zero_dp"
        android:src="@drawable/search_icon"
        app:layout_constraintBottom_toBottomOf="@id/sb_main"
        app:layout_constraintStart_toStartOf="@id/sb_main"
        app:layout_constraintTop_toTopOf="@id/sb_main" />

    <EditText
        android:id="@+id/sb_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_horizontal"
        android:layout_marginTop="@dimen/margin_top_8dp"
        android:background="@drawable/bg_search_bar"
        android:importantForAutofill="no"
        android:hint="@string/input_country"
        android:inputType="text"
        android:paddingVertical="@dimen/padding_vertical_8dp"
        android:paddingStart="@dimen/padding_start_46dp"
        android:paddingEnd="@dimen/padding_end_60dp"
        android:singleLine="true"
        android:textSize="@dimen/text_size_16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_filter_items"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginTop="@dimen/margin_top_46dp"
        app:layout_constraintBottom_toTopOf="@id/button_reset"
        app:layout_constraintTop_toBottomOf="@id/sb_main"
        tools:listitem="@layout/choose_filter_item" />

    <Button
        android:id="@+id/button_reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_horizontal"
        android:layout_marginTop="@dimen/margin_top_18dp"
        android:layout_marginBottom="@dimen/margin_bottom_36dp"
        android:text="@string/reset_filter"
        android:backgroundTint="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rv_filter_items" />

</androidx.constraintlayout.widget.ConstraintLayout>