<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clipToPadding="false"
    tools:context=".presentation.ui.profilepage.ProfilePageFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_watched"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start"
            android:text="@string/watched"
            android:textSize="@dimen/text_size_18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_all_watched"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_start"
            android:background="@drawable/bg_ripple_rectangle"
            android:clickable="true"
            android:drawablePadding="@dimen/padding_4dp"
            android:focusable="true"
            android:gravity="center_vertical"
            android:padding="@dimen/padding_12dp"
            android:textColor="@color/blue"
            android:textSize="@dimen/text_size_14sp"
            app:drawableEndCompat="@drawable/ic_right"
            app:layout_constraintBaseline_toBaselineOf="@id/tv_watched"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="15" />

        <FrameLayout
            android:id="@+id/watched_container"
            android:layout_width="match_parent"
            android:layout_height="@dimen/media_banner_height"
            android:layout_marginTop="@dimen/margin_top_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_watched">

            <TextView
                android:id="@+id/tv_empty_watched"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/empty_collection" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_watched"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:nestedScrollingEnabled="false"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_watched"
                tools:listitem="@layout/item_banner" />
        </FrameLayout>

        <TextView
            android:id="@+id/tv_collections"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start"
            android:layout_marginTop="@dimen/margin_top_16dp"
            android:text="@string/collections"
            android:textSize="@dimen/text_size_18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/watched_container" />

        <LinearLayout
            android:id="@+id/ll_create_collection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_16dp"
            android:orientation="horizontal"
            android:paddingVertical="@dimen/padding_12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_collections">

            <TextView
                android:id="@+id/tv_add_collection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start_24dp"
                android:drawablePadding="@dimen/padding_12dp"
                android:background="@drawable/bg_ripple_rectangle"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/add_your_collection"
                android:textSize="@dimen/text_size_20sp"
                app:drawableStartCompat="@drawable/add_icon" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_collections"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="2"
            app:layout_constraintTop_toBottomOf="@id/ll_create_collection"
            tools:listitem="@layout/item_collection" />

        <TextView
            android:id="@+id/tv_was_interesting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start"
            android:layout_marginTop="@dimen/margin_top_46dp"
            android:text="@string/you_have_interested"
            android:textSize="@dimen/text_size_18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_collections" />

        <TextView
            android:id="@+id/tv_all_was_interesting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_start"
            android:background="@drawable/bg_ripple_rectangle"
            android:clickable="true"
            android:drawablePadding="@dimen/padding_4dp"
            android:focusable="true"
            android:gravity="center_vertical"
            android:padding="@dimen/padding_12dp"
            android:textColor="@color/blue"
            android:textSize="@dimen/text_size_14sp"
            app:drawableEndCompat="@drawable/ic_right"
            app:layout_constraintBaseline_toBaselineOf="@id/tv_was_interesting"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="15" />

        <FrameLayout
            android:id="@+id/interested_container"
            android:layout_width="match_parent"
            android:layout_height="@dimen/media_banner_height"
            android:layout_marginTop="@dimen/margin_top_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_was_interesting">

            <TextView
                android:id="@+id/tv_empty_interested"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/empty_collection" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_was_interesting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:nestedScrollingEnabled="false"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_was_interesting"
                tools:listitem="@layout/item_banner" />
        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>